# ptbxl-challenge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tasks.py
docs/: install.md  project_structure.md
notebooks/: 01-AGE-data_exploration.ipynb  02-AGE-signal_preprocessing.ipynb  03-AGE-feature_engineering.ipynb  04-AGE-feture_selection.ipynb
src/ptbxl/data/: make_dataset.py  signal_preprocessing.py
src/ptbxl/features/: build_features.py
src/ptbxl/models/: tracking.py
src/ptbxl/utils/: paths.py
